tạo service message và fix lỗi employer-service